# cloudquery

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  entrypoint.sh  extension_config.json  go.mod  go.sum  package-lock.json  package.json
CMake/: CMakeLibs.cmake  Packages.cmake
cloudquery/: CMakeLists.txt
cloudquery/devtools/: devtools.h  printer.cpp  shell.cpp
cloudquery/events/: CMakeLists.txt  api_events_publisher.cpp  api_events_publisher.h
cloudquery/main/: lib.cpp  main.cpp  rhel5_support.cpp
cloudquery/main/posix/: main.cpp
cloudquery/main/windows/: main.cpp
cloudquery/tables/: CMakeLists.txt
cloudquery/tables/events/: kubernetes_events.cpp  kubernetes_events.h
cloudquery/tables/networking/: curl.cpp
cloudquery/tables/utility/: cloudquery.cpp  file.cpp  time.cpp
cmd/cloudquery/: main.go
extension/: .gitignore  extension_config.json.sample  helper.go  main.go  plugins.go
extension/aws/: filtering.go  tables.md  utils.go  utils_test.go
extension/aws/acm/: aws_acm_certificate.go  table_config.json
extension/aws/apigateway/: aws_apigateway_rest_api.go  table_config.json
extension/aws/cloudformation/: aws_cloudformation.go  aws_cloudformation_describe_stacks.go  aws_cloudformation_stack.go  table_config.json  tables.md
extension/aws/cloudtrail/: aws_cloudtrail.go  aws_cloudtrail_event.go  aws_cloudtrail_trail.go  table_config.json  tables.md
extension/aws/cloudwatch/: aws_cloudwatch_alarms.go  aws_cloudwatch_event_buses.go  aws_cloudwatch_event_rules.go  table_config.json  tables.md
extension/aws/codecommit/: aws_code_commit_list_repository.go  table_config.json  tables.md
extension/aws/codedeploy/: aws_code_deploy_list_application.go  table_config.json  tables.md
extension/aws/codepipeline/: aws_code_pipeline_list_pipeline.go  table_config.json  tables.md
extension/aws/config/: aws_config_delivery_channel.go  table_config.json
extension/aws/directoryservice/: aws_directory.go  aws_directory_describe_directories.go  table_config.json  tables.md
extension/aws/ec2/: aws_ec2_image.go  aws_ec2_instance.go  aws_ec2_subnet.go  aws_ec2_vpc.go  table_config.json  tables.md
extension/aws/ecr/: aws_ecr.go  table_config.json  tables.md
extension/aws/ecs/: aws_elastic_container_service.go  table_config.json  tables.md
extension/aws/efs/: aws_efs.go  aws_efs_file_system.go  table_config.json  tables.md
extension/aws/eks/: aws_eks.go  table_config.json  tables.md
extension/aws/elb/: aws_classic_loadbalancer.go  table_config.json  tables.md
extension/aws/elbv2/: aws_elastic_loadbalancer_v2.go  table_config.json  tables.md
extension/aws/guardduty/: aws_guardduty_list_detector.go  table_config.json  tables.md
extension/aws/kms/: aws_kms_keys.go  table_config.json  tables.md
extension/aws/organizations/: aws_organizations_delegated_administrator.go  aws_organizations_describe_organizations.go  aws_organizations_list_accounts.go  aws_organizations_list_roots.go  table_config.json  tables.md
extension/aws/s3/: aws_s3_bucket.go  table_config.json
extension/aws/s3_glacier/: aws_s3_glacier.go  table_config.json  tables.md
extension/aws/workspaces/: aws_workspaces_describe_workspaces.go  table_config.json  tables.md
extension/azure/: tables.md  utils.go  utils_test.go
extension/azure/compute/: azure_compute_networkinterface.go  azure_compute_networkinterfaces.go  azure_compute_vm.go  table_config.json  tables.md
extension/config/: plugins.json
extension/gcp/: tables.md  utils.go  utils_test.go
extension/gcp/cloudlog/: gcp_cloud_log_event.go
extension/gcp/compute/: gcp_compute_disk.go  gcp_compute_disk_test.go  gcp_compute_image.go  gcp_compute_instance.go  gcp_compute_instance_test.go  gcp_compute_interconnect.go  gcp_compute_mock.go  gcp_compute_network.go  gcp_compute_network_test.go  gcp_compute_reservation.go  gcp_compute_route.go  gcp_compute_router.go  gcp_compute_test.go  gcp_compute_vpn_gateway.go  gcp_compute_vpn_tunnel.go  table_config.json  tables.md
extension/gcp/container/: gcp_container_cluster.go
extension/gcp/dns/: gcp_dns_managed_zone.go  gcp_dns_policy.go
extension/gcp/file/: gcp_file_backup.go  gcp_file_instance.go
extension/gcp/function/: gcp_cloud_function.go
extension/gcp/iam/: gcp_iam_role.go  gcp_iam_service_account.go
extension/gcp/run/: gcp_cloud_run_revision.go  gcp_cloud_run_service.go
extension/gcp/sql/: gcp_sql_database.go  gcp_sql_instance.go
extension/gcp/storage/: gcp_storage_bucket.go  table_config.json
include/cloudquery/: loadPlugins.h  version.h
specs/: curl.table  kubernetes_events.table  kubernetes_namespaces.table  kubernetes_secrets.table
specs/utility/: cloudquery_config.table  cloudquery_events.table  cloudquery_extensions.table  cloudquery_flags.table  cloudquery_info.table  cloudquery_packs.table  cloudquery_registry.table  cloudquery_schedule.table
tools/: build.sh  get_platform.py  lib.sh  provision.sh  provision_lib.sh
tools/codegen/: gentable.py
tools/codegen/templates/: amalgamation.cpp.in  default.cpp.in
tools/deployment/: cloudquery.example.conf  cloudqueryctl  cloudqueryd.initd  cloudqueryd.service  cloudqueryd.sysconfig  deb_postinstall.sh  linux_prerm.sh  make_linux_package.sh
tools/patches/: curl_fdlt.patch
tools/stubs/: kubernetes_config_maps.table  kubernetes_containers.table  kubernetes_daemonsets.table  kubernetes_deployments.table  kubernetes_nodes.table  kubernetes_nodes_addresses.table  kubernetes_nodes_status.table  kubernetes_pods.table  kubernetes_services_info.table  kubernetes_services_specs.table
tools/tests/: utils.py
utilities/: extension_configuration.go  globals.go  logger.go  table.go  table_config.go  type_converters.go  utilities.go  utilities_test.go
utilities/extension-codegen/: gcpTemplates.js  generateGcpExtensions.js
